# rag

./: -  .dockerignore  .env  .env.docker  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.example  Dockerfile.origin  deploy.sh  docker-compose.mongo.yml  docker-compose.yml  main.py  nginx.conf  project_architecture.md  pyproject.toml  requirements.txt
app/: main.py
app/clients/: __init__.py  milvus_utils.py  minio_utils.py  mongo_util.py
app/config/: __init__.py  embedding_config.py  lm_config.py  milvus_config.py  mineru_config.py  minio_config.py  reranker_config.py
app/core/: __init__.py  load_prompt.py  logger.py
app/import_process/: __init__.py
app/import_process/agent/: main_graph.py  state.py
app/import_process/agent/nodes/: __init__.py  (+7 more)
app/import_process/api/: __init__.py  file_import_service.py
app/import_process/page/: import.html
app/llm/: __init__.py  embedding_utils.py  glm_client.py  llm_util.py  reranker_util.py
app/query_process/: __init__.py
app/query_process/agent/: main_graph.py  state.py
app/query_process/api/: __init__.py  query_service.py
app/query_process/page/: chat.html
app/utils/: __init__.py  format_utils.py  path_util.py  sse_utils.py  task_utils.py
deploy/: .env.docker  Dockerfile.import  Dockerfile.query  docker-compose.yml  start.sh
deploy/nginx/: nginx.conf
scripts/: docker-compose.yml  mongo.shell
test/: 01-env和系统环境变量的优先级.py  03-cuda测试.py  04-test_graph_flow.py  05-test-minerU.py  06-download_bge.py  06-download_reranker.py  07-test-query-graph.py  08-sse_step1.py  08-sse_step2.html  08-sse_step2.py
(+9 files in other folders)
